--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -3,6 +3,15 @@
   port 24224
   bind 0.0.0.0
 </source>
+
+<filter test**>
+  @type record_transformer
+  enable_ruby
+  <record>
+    host ${host}
+  </record>
+</filter>
+
 <match *.**>
   @type copy
   <store>
